@@ -204,9 +204,9 @@ setkey(TESTDT,a,b)
 #       [5,] d 9 5
 #       [6,] d 9 6
 #       [7,] g 2 7
-test(51, TESTDT[SJ(c("d","d","e","g"),c(6,7,1,2)),v,mult="all",roll=TRUE,nomatch=0][[3]], INT(3:4,4,7))  # will test sortedmatch for strings in the level match
+test(51, TESTDT[SJ(c("d","d","e","g"),c(6,7,1,2)),v,mult="all",roll=TRUE,nomatch=0][[3]], INT(3:4,4,7))
 test(200, TESTDT[SJ(c("d","d","e","g"),c(6,7,1,2)),v,mult="all",roll=TRUE,nomatch=NA][[3]], INT(3:4,4,NA,7))
-test(52, TESTDT[J(c("g","d","e","d"),c(6,6,1,2)),v,mult="all",roll=TRUE,nomatch=0][[3]], INT(7,3:4))  # also will test sortedmatch for strings in the level match
+test(52, TESTDT[J(c("g","d","e","d"),c(6,6,1,2)),v,mult="all",roll=TRUE,nomatch=0][[3]], INT(7,3:4))
 test(201, TESTDT[J(c("g","d","e","d"),c(6,6,1,2)),v,mult="all",roll=TRUE,nomatch=NA][[3]], INT(7,3:4,NA,NA))
 
 TESTDT$b = factor(letters[TESTDT$b])
@@ -231,18 +231,8 @@ t = try(TESTDT[J(c("g","d","d","d","e","d"),c("b","g","k","b","a","f")),v,rollto
 test(59, inherits(t,"try-error"))  # When character evaluates to INT(7,4,NA,NA,NA,3)
 test(60, length(grep("Attempting roll join on factor column", t)))
 
-##  Add tests on sortedmatch as well to nail it down even further,  even though its called above.
-if (!exists("sortedmatch")) sortedmatch = data.table:::sortedmatch        # for eval(body(test.data.table)) when data.table is in namespace only and isn't in development in .GlobalEnv
-test(61, sortedmatch(c("a","h","f","h","j"), letters[1:8]), INT(1,8,6,8,NA))
-test(62, sortedmatch(INT(5,2,4,3,NA,7), INT(2,4,5,7)), INT(3,1,2,NA,NA,4))
-test(63, sortedmatch(1:3,INT(NULL)), INT(NA,NA,NA))
-
-t = try(sortedmatch(c("a","h","f","j"), letters[8:1], check=TRUE), silent=TRUE)
-test(64, inherits(t,"try-error"))   # v2 is not sorted
-t = try(sortedmatch(letters[1:3], 1:3), silent=TRUE)
-test(65, inherits(t,"try-error"))   # v1 and v2 must be the same storage.mode
-t = try(sortedmatch(as.double(1:3), as.double(1:3)), silent=TRUE)
-test(66, inherits(t,"try-error"))   # only character or integer accepted
+# Tests 61-66 were testing sortedmatch which is now replaced by chmatch for characters, and removed
+# for integers until needed.
 
 # Test 67 removed. No longer use factors so debate/problem avoided.
 # [.factor and c.factor are no longer present in data.table, not even hidden away
@@ -1525,6 +1515,16 @@ if ("package:nlme" %in% search()) {
     test(528, {x=iris;tt=groupedData( Sepal.Length ~ Sepal.Width | Species, data=x);attr(tt,"class")=NULL;attr(tt,"FUN")=NULL;tt},
               {x=as.data.table(iris);tt=groupedData( Sepal.Length ~ Sepal.Width | Species, data=x);attr(tt,"class")=NULL;attr(tt,"FUN")=NULL;attr(tt,".internal.selfref")=NULL;tt})
 }
+
+# Speed test of chmatch vs match.
+# sortedmatch was 40 times slower and the wrong approach, removed in v1.8.0.
+# Example from Tom in Jan 2011 who first found and raised the issue with sortedmatch.
+n = 1e6
+a = as.character(as.hexmode(sample(n,replace=T)))
+b = as.character(as.hexmode(sample(n,replace=T)))
+test(529, system.time(ans1<-match(a,b))["user.self"] > system.time(ans2<-chmatch(a,b))["user.self"])
+test(530, ans1, ans2)
+# sorting a and b no longer makes a difference since both match and chmatch work via hash in some way or another
 
 
 ## See test-* for more tests
